fix some color space related issu in mobile view and fix dark mode color problem

--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,5 @@
 @import "tailwindcss";
 
+body {
+    overflow-x: hidden;
+}
